# Clinical_Trial_System_Solution

./: .env.example  .gitignore  .pre-commit-config.yaml  CI_CD_QUICK_REFERENCE.md  DEVELOPMENT_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.streamlit.yml  docker-compose.yml  novo-nordisk-cvi-guidelines.md  pytest.ini
ctsr-api/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
ctsr-api/api/: __init__.py  auth.py  config.py  exceptions.py  main.py
ctsr-api/api/db/: __init__.py  base.py  database.py  models.py
ctsr-api/api/models/: __init__.py  admin.py  confirmations.py  lookups.py  systems.py  trials.py  vendors.py
ctsr-api/api/routers/: __init__.py  admin.py  confirmations.py  health.py  lookups.py  systems.py  trials.py  vendors.py
ctsr-api/api/services/: __init__.py  admin.py  confirmations.py  lookups.py  systems.py  trials.py  vendors.py
ctsr-api/api/utils/: pagination.py
ctsr-api/tests/: conftest.py  test_sample.py
ctsr-api/tests/integration/: test_health_and_lookups.py  test_system_trial_confirmation_flow.py  test_vendors_api.py
streamlit-app/: .env.example  .gitignore  DELIVERY_SUMMARY.md  DEVELOPER_GUIDE.md  Dockerfile  INDEX.md  INTEGRATION_TESTING.md  QUICKSTART.md  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
streamlit-app/.streamlit/: config.toml
streamlit-app/app/: __init__.py
streamlit-app/app/pages/: confirmations.py  dashboard.py  reports.py  settings.py  systems.py  trials.py  vendors.py
streamlit-app/app/utils/: api_client.py  (+1 more)
(+18 files in other folders)
